feat Applied Standard Scaler to numfeature

--- a/Sparkify_Churn_Prediction.ipynb
+++ b/Sparkify_Churn_Prediction.ipynb
@@ -1189,6 +1189,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(label=0, features=DenseVector([1.0, 55.0, 0.0, 0.0, 7.0, 4.7143, 2.4286, 39.2857, 9562.9853, 38.5714, 7.3333]))]"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data2.take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 141,
    "metadata": {},
    "outputs": [
@@ -1206,7 +1226,6 @@
    ],
    "source": [
     "lr = LogisticRegression(maxIter=10, regParam=0.0)\n",
-    "\n",
     "lrModel_q1 = lr.fit(data2)"
    ]
   },
@@ -1262,22 +1281,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler_q2 = StandardScaler(inputCol=\"NumFeatures\", outputCol=\"FeatNormalizer\", withMean=False, withStd=False)\n",
+    "scaler_q2 = StandardScaler(inputCol=\"NumFeatures\", outputCol=\"FeatStandard\", withMean=True, withStd=True)\n",
     "stdmodel = scaler_q2.fit(data)\n",
-    "df = stdmodel.transform(data)"
+    "data_std = stdmodel.transform(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(userId='100010', gender='F', date_created=datetime.date(2018, 9, 27), user_age=55, paid_user=0, downgraded=0, canceled=0, total_session=7, interactions=4.714285714285714, thumbs_down=2.4285714285714284, songs=39.285714285714285, length=9562.985335714286, artists=38.57142857142857, session_gap=7.333333333333333, female=1, NumFeatures=DenseVector([1.0, 55.0, 0.0, 0.0, 7.0, 4.7143, 2.4286, 39.2857, 9562.9853, 38.5714, 7.3333]), FeatNormalizer=DenseVector([1.0, 55.0, 0.0, 0.0, 7.0, 4.7143, 2.4286, 39.2857, 9562.9853, 38.5714, 7.3333]))]"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data3 = df.select(col('canceled').alias('label'), col('FeatNormalizer').alias('features'))\n",
+    "data3 = data_std.select(col('canceled').alias('label'), col('FeatStandard').alias('features'))\n",
     "lr = LogisticRegression(maxIter=10, regParam=0.0)\n",
     "\n",
     "lrModel_q1 = lr.fit(data3)"
@@ -1285,9 +1324,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9047619047619048"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lrModel_q1.summary.accuracy"
    ]
