fix: Update Sparksession aws setting

--- a/Sparkify_spark_deploy.ipynb
+++ b/Sparkify_spark_deploy.ipynb
@@ -45,8 +45,8 @@
    "outputs": [],
    "source": [
     "# Create a Spark session\n",
-    "spark = SparkSession.builder \\\n",
-    "    .master(\"local\") \\\n",
+    "spark = SparkSession \\\n",
+    "    .builder \\\n",
     "    .appName(\"Sparkify\") \\\n",
     "    .getOrCreate()"
    ]
@@ -65,8 +65,9 @@
    "outputs": [],
    "source": [
     "# Read in full sparkify dataset\n",
-    "sparkify_data = 'mini_sparkify_event_data.json'\n",
-    "df = spark.read.json(sparkify_data)"
+    "event_data = \"s3n://udacity-dsnd/sparkify/sparkify_event_data.json\"\n",
+    "df = spark.read.json(event_data)\n",
+    "df.head()"
    ]
   },
   {
