doc: Add documentation for functions

--- a/Sparkify_Churn_Prediction.ipynb
+++ b/Sparkify_Churn_Prediction.ipynb
@@ -1495,6 +1495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split train/test data\n",
     "test, validation = data.randomSplit([0.8, 0.2], seed=42)"
    ]
   },
@@ -1504,8 +1505,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Standard Scaler\n",
     "standardscaler = StandardScaler(inputCol=\"NumFeatures\", outputCol=\"features\", withMean=True, withStd=True)\n",
     "\n",
+    "# Evaluators from pyspark mllib\n",
     "lr = LogisticRegression(maxIter=10, regParam=0.0)\n",
     "gbt = GBTClassifier(maxIter=5, maxDepth=2)\n",
     "lsvc = LinearSVC(maxIter=10, regParam=0.1)\n",
@@ -1519,6 +1522,9 @@
    "outputs": [],
    "source": [
     "def fit_model(model, paramGrid = None):\n",
+    "    # Model fitting with selected model and paramgric(optional)\n",
+    "    # Input: model, paramgrid\n",
+    "    # Output: fitted model, prediction on validation set\n",
     "    pipeline = Pipeline(stages=[standardscaler, model])\n",
     "    \n",
     "    if paramGrid != None:\n",
@@ -1541,13 +1547,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Evaluate the model on validation set\n",
     "def val_evaluation(results):\n",
+    "    # Input: prediction results\n",
+    "    # Output: accuracy, precision and recall score\n",
     "    predictionAndLabels = results.select(['prediction', 'label']\\\n",
     "                                      ).withColumn('label',col('label').cast(DoubleType())).rdd\n",
     "\n",
     "    metrics = MulticlassMetrics(predictionAndLabels)\n",
     "    cm=metrics.confusionMatrix().toArray()\n",
     "    \n",
+    "    # Use confusion matrix to calculate evaluation metrics\n",
+    "    # accuracy: (TP+TN)/Total Predictions\n",
+    "    # precision: TP/(TP + FP)\n",
+    "    # recall: TP/(TP + FN)\n",
     "    accuracy=(cm[0][0]+cm[1][1])/cm.sum()\n",
     "    precision=(cm[1][1])/(cm[0][1]+cm[1][1])\n",
     "    recall=(cm[1][1])/(cm[1][0]+cm[1][1])\n",
@@ -1560,6 +1573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fit models ane print results\n",
     "lrmodel, lrresults = fit_model(lr)"
    ]
   },
