--- a/Sparkify_Churn_Prediction.ipynb
+++ b/Sparkify_Churn_Prediction.ipynb
@@ -937,15 +937,16 @@
     "    # Output: fitted model, prediction on validation set\n",
     "    pipeline = Pipeline(stages=[standardscaler, model])\n",
     "    \n",
-    "    if paramGrid != None:\n",
-    "        crossval = CrossValidator(estimator=pipeline,\n",
-    "                          estimatorParamMaps=paramGrid,\n",
-    "                          evaluator=MulticlassClassificationEvaluator(),\n",
-    "                          numFolds=3)\n",
-    "        fitmodel = crossval.fit(test)\n",
-    "    else:\n",
-    "        fitmodel = pipeline.fit(test)\n",
+    "    # Use crossvalidation to validate the model\n",
+    "    crossval = CrossValidator(estimator=pipeline,                      \n",
+    "                        evaluator=MulticlassClassificationEvaluator(),\n",
+    "                        numFolds=3)\n",
     "    \n",
+    "    if paramGrid != None:\n",
+    "        crossval = crossval.setEstimatorParamMaps(paramGrid)\n",
+    "\n",
+    "    fitmodel = crossval.fit(test)\n",
+    "\n",
     "    results = fitmodel.transform(validation)\n",
     "    \n",
     "    return fitmodel, results"
